# Directx11

./: .gitignore  .gitmodules  CMakeLists.txt  Directx11.sln  Directx11.vcxproj  Directx11.vcxproj.filters  Generate.bat  Todo.txt  imgui.ini
BackUp/: BackupCode.txt
Editor/: CMakeLists.txt
Editor/src/: main.cpp  pch.h
Editor/src/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Editor/src/Viewport/: RenderingThread.cpp  RenderingThread.h  Viewport.cpp  Viewport.h
Engine/: CMakeLists.txt
Engine/assets/: imgui.ini
Engine/assets/FbxCache/Amy/: ControlPoints  Joints  Material  Silly Dancing
Engine/assets/FbxCache/James/: Joints  Material  Shoved Reaction With Spin
Engine/assets/FbxCache/Jamie/: ControlPoints  Defeated  Hip Hop Dancing  Joints  Joyful Jump  Material
Engine/assets/FbxCache/Kachujin/: ControlPoints  Death  FlyingKick  HitReaction  Idle  Joints  Kick  Kick2  Material  Run  StartWalking  StopWalking  playerWalking
Engine/assets/FbxCache/Maria/: Capoeira  ControlPoints  Joints  Material
Engine/assets/FbxCache/Pearl/: Capoeira  ControlPoints  Joints  Material
Engine/assets/FbxCache/Remy/: Capoeira  Material
Engine/assets/FbxCache/Zombie/: ControlPoints  Joints  Material
Engine/assets/FbxCache/lucy/: ControlPoints  Joints  Material
Engine/assets/Scene/: PBR.scene  imgui.ini  kk.scene  sdf  sky.scene  spotShadow.scene  tesselation.scene  test.scene
Engine/assets/Shader/2D/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/2DShadow/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Color/: Pixel.hlsl
Engine/assets/Shader/Compute/Basic/: Compute.hlsl
Engine/assets/Shader/Compute/Texture/: Compute.hlsl
Engine/assets/Shader/Deffered/Light/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Deffered/Lighting/: Pixel.hlsl  Vertex.hlsl  imgui.ini
Engine/assets/Shader/Deffered/Skeletal/: Pixel.hlsl  Vertex.hlsl  imgui.ini
Engine/assets/Shader/Deffered/SkyBox/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Deffered/Static/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/DifferedLighting/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Effect/Blur/Vertical/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Effect/Environment/Skeletal/: Geometry.hlsl  Pixel.hlsl
Engine/assets/Shader/Effect/Environment/SkyBox/: Vertex.hlsl
Engine/assets/Shader/Effect/Environment/Static/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Effect/HorizontalBlur/: Vertex.hlsl
Engine/assets/Shader/Effect/Shadow/Directional/Skeletal/: Geometry.hlsl  Vertex.hlsl
Engine/assets/Shader/Effect/Shadow/Directional/Static/: Vertex.hlsl
Engine/assets/Shader/Effect/Shadow/Point/Skeletal/: Vertex.hlsl
Engine/assets/Shader/Effect/Shadow/Point/Static/: Vertex.hlsl
Engine/assets/Shader/Effect/Shadow/Spot/Skeletal/: Vertex.hlsl
Engine/assets/Shader/Effect/Shadow/Spot/Static/: Vertex.hlsl  imgui.ini
Engine/assets/Shader/Etc/: Pixel.hlsl
Engine/assets/Shader/Etc/2D/: Pixel.hlsl
Engine/assets/Shader/Etc/CheckSO/: Vertex.hlsl
Engine/assets/Shader/Etc/DrawLight/: Pixel.hlsl
Engine/assets/Shader/Etc/ExTesselation/Static/: Domain.hlsl  Hull.hlsl  Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Etc/PNTriangle/: Vertex.hlsl
Engine/assets/Shader/Etc/Streamout/: Domain.hlsl  Geometry.hlsl
Engine/assets/Shader/Etc/basic/: Hull.hlsl  Vertex.hlsl
Engine/assets/Shader/Forward/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Forward/Blend/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Forward/Light/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Forward/Skeletal/: Domain.hlsl  Hull.hlsl  Pixel.hlsl  Vertex.hlsl  imgui.ini
Engine/assets/Shader/Forward/SkyBox/: Pixel.hlsl
Engine/assets/Shader/Forward/Static/: Domain.hlsl  Hull.hlsl  Pixel.hlsl  Vertex.hlsl  imgui.ini
Engine/assets/Shader/Forward/Tesselation/Skeletal/: Domain.hlsl  Pixel.hlsl
Engine/assets/Shader/Forward/Tesselation/Static/: Domain.hlsl  Pixel.hlsl
Engine/assets/Shader/HDR/Average/: Compute.hlsl
Engine/assets/Shader/HDR/Lighting/: Pixel.hlsl
Engine/assets/Shader/Lighting/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/Scene/Fbx/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/SkeletalMesh/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/SkeletalMeshShadow/: Vertex.hlsl
Engine/assets/Shader/Skinned/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/StaticDiffered/: Pixel.hlsl
Engine/assets/Shader/StaticMesh/: Pixel.hlsl  Vertex.hlsl
Engine/assets/Shader/StaticMeshShadow/: Vertex.hlsl
Engine/src/: Engine.h  SandBox.cpp  main.cpp  pch.h
Engine/src/Common/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Timestep.cpp  Timestep.h  Transform.cpp  Transform.h
Engine/src/Core/: App.cpp  Base.h  ImGuiLayer.cpp  ImGuiLayer.h  Log.cpp  Log.h  ModuleCore.cpp  ModuleCore.h  Window.h
Engine/src/File/: FbxLoader.cpp  FbxLoader.h  FileCommon.cpp  FileCommon.h  ObjLoader.cpp  ObjLoader.h  Serialization.h  SerializedData.h
Engine/src/Model/: Model.cpp  Model.h
Engine/src/Model/2D/: 2DModelBuilder.cpp  2DModelBuilder.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h
Engine/src/Model/3D/: ModelBuilder.h  Modelbuilder.cpp  SkeletalAnimation.cpp  SkeletalAnimation.h  Skeleton.cpp  Skeleton.h
Engine/src/Renderer/: CBuffer.cpp  CBuffer.h  Dx11Core.cpp  Dx11Core.h  GBuffer.cpp  GBuffer.h  InputLayout.cpp  InputLayout.h  ModelBuffer.cpp  ModelBuffer.h  PipelineController.cpp  PipelineController.h  Renderer.cpp  Renderer.h  SBuffer.cpp  SBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/src/Util/: Math.cpp  Math.h  MathType.h  MathTypeConverter.cpp  MathTypeConverter.h  MeshInfo.cpp  MeshInfo.h  Misc.cpp  Misc.h
SandBox/: CMakeLists.txt
SandBox/src/: SandBox.cpp  SandBox.h  Scene.cpp  Scene.h  main.cpp  pceh.cpp  pceh.h
SandBox/src/Script/: MultiLighting.cpp  MultiLighting.h  Script.cpp  Script.h
SandBox/src/scene/: 3d_animation.cpp  3d_animation.h  PhongShading.cpp  PhongShading.h  Scene.cpp  Scene.h  fbxload.cpp  fbxload.h
WhiteBoard/: CMakeLists.txt  Source.cpp  WhiteBoard.vcxproj  filename
WhiteBoard/src/: Main.cpp
(+107 files in other folders)
